# software_construction_1_intro

./: CMakeLists.txt  README.md
src/: main3.cpp
